<resources>
    <string name="app_name">ES20 升级</string>
    <!--<string name="app_name">仪表协议工具</string>-->

    <string name="connecting">正在连接</string>
    <string name="scan_list">扫描列表</string>
    <string name="stop_scan">停止</string>
    <string name="start_scan">扫描</string>
    <string name="connect_fail">连接失败</string>
    <string name="disconnect_success">连接已断开</string>
    <string name="disconnect_fail">断开失败</string>
    <string name="connect_time_out">连接超时</string>
    <string name="upgrade_page">升级页面</string>
    <string name="not_connect">未连接</string>
    <string name="connected">已连接</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="upgrading">正在升级</string>
    <string name="send_fail">数据发送失败</string>
    <string name="read_config">读取配置</string>
    <string name="control_upgrade">控制器升级</string>
    <string name="current_device_version_info">当前车辆版本信息：</string>
    <string name="yb_soft_version">软件版本：%s</string>
    <string name="yb_ware_version">硬件版本：%s</string>
    <string name="control_soft_version">软件版本：%s</string>
    <string name="control_ware_version">硬件版本：%s</string>
    <string name="control_newest">当前控制器已是最新版本:%s</string>
    <string name="current_control_version">当前控制器版本：%s</string>
    <string name="upgrade_success">升级成功</string>
    <string name="upgrade_fail">升级失败:%s</string>
    <string name="upgrade_percent">升级进度:%d%%</string>
    <string name="ware_version_err">升级失败，硬件版本号异常</string>
    <string name="cmd_upgrade_fail">程序升级失败</string>
    <string name="pwd_err">密码错误</string>
    <string name="meter_version_info">仪表版本信息：</string>
    <string name="control_version_info">控制器版本信息：</string>

    <string name="refluse_ble_open_permission">我需要控制蓝牙与设备通信!</string>
    <string name="refuse_read_phone_state_permission">我需要阅读手机权限来阅读调试日志!</string>
    <string name="refuse_row_permission">我需要读写sd卡来升级设备!</string>
    <string name="refuse_location_permission">我需要开启定位进行蓝牙控制!</string>

    <string name="input_pda_empty">UserName Or Password must be not empty</string>
</resources>