<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/include"
        layout="@layout/tools_bar_normal_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_conn_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <TextView
            android:id="@+id/tv_device"
            android:text="--"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_conn_state"
            android:text="@string/not_connect"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="5dp"
            android:background="@color/ConfigSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>




    <Button
        android:id="@+id/btn_read_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_config"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_conn_state"/>


    <Button
        android:id="@+id/btn_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_upgrade"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_read_config"/>


    <RelativeLayout
        android:id="@+id/rl_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_upgrade">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/current_device_version_info"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tv_meter_version"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:text="@string/meter_version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_meter_soft_version"
            android:layout_marginStart="16dp"
            android:layout_below="@+id/tv_meter_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_meter_hardware_version"
            android:layout_below="@+id/tv_meter_version"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tv_meter_soft_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_control_version"
            android:layout_below="@+id/tv_meter_hardware_version"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:text="@string/control_version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="16dp"
            android:id="@+id/tv_control_soft_version"
            android:layout_below="@+id/tv_control_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_control_hardware_version"
            android:layout_toEndOf="@+id/tv_control_soft_version"
            android:layout_below="@+id/tv_control_version"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textSize="12sp" />

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_version">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result："
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tv_control_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>